spacing fixes

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -34,7 +34,7 @@ body {
 .about-container, .resources-container, .contact-container {
     display: flex;
     flex-direction: column;
-    padding: 75px 10vw;
+    padding: 50px 10vw;
     flex: 1 1 0;
     min-height: 100%;
     justify-content: center;
